# 21st-Century-Examples

./: README.md  amort_interface.c  amort_use.c  amortize.c  amortize.h  arithmetic.c  asprintf.c  atomic_factors.c  auto.conf  automem.c  benford.sh  boxes.c  c_factors.c  c_primes.c  cetology.c  cetology.make  charct.c  complex.c  const.c  constchange.c  constfusion.c  conststruct.c  copystructs.c  copystructs2.c  cplx.h  curly.c  dict.automake  dict.c  dict.h  dict_test.c  dict_use.c  dynamic.c  erf.c  errortuple.c  fibo.c  find.moby  floatfail.c  fstr.c  fstr.h  gcov.sh  (+72 more)
py/: Makefile.am  Makefile.py.am  build.python  configure.ac  ideal.py.c  setup.py  setup.py.in
tutorial/: address_in.c  assert.c  divisions.c  do_while.c  error_print.c  for_loop.c  for_loop2.c  hello.c  if_else.c  item_seven.c  makefile  manual_memory.c  pointer_in.c  ratio_s.c  sizeof.c  sqrt.c  ten_pi.c  while.c
